--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "font-awesome": "latest",
     "jquery": "3.2.1",
     "mydaterangepicker": "^4.1.12",
-    "ng2-slim-loading-bar": "1.5.1",
+    "ng2-slim-loading-bar": "^4.0.0",
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
